fixed problem with other bold tags not showing up in bold.

--- a/_sass/jekyll-theme-modernist.scss
+++ b/_sass/jekyll-theme-modernist.scss
@@ -44,6 +44,10 @@ strong {
   font-weight:700;
 }
 
+b {
+  font-weight:700;
+}
+
 header {
   border-radius: 8px 8px 0 0;
   background:#0808ff;
